# Squad-AI

./: .env.example  .gitignore  README.md  alembic.ini  app_completo.py  auth.py  database.py  demandas.db  main.py  pyproject.toml  requirements.txt  test_local.py  validate_config.py
alembic/versions/: 85a76ae36e62_initial_schema.py
backups/: backup_20260222_213428.db  backup_20260222_223442.db
docs/: HANDOFF.md
docs/architecture/: architecture.md  system-architecture.md
docs/design-system/: A11Y_AUDIT.md  DESIGN_SYSTEM.md
docs/frontend/: frontend-spec.md
docs/prd/: brownfield-prd.md  technical-debt-DRAFT.md  technical-debt-assessment.md
docs/reports/: TECHNICAL-DEBT-REPORT.md
docs/reviews/: db-specialist-review.md  qa-review.md  ux-specialist-review.md
docs/stories/: epic-technical-debt.md  story-01-visual-bug.md  story-02-backup-bug.md  story-03-execution-preview.md  story-04-preview-python.md  story-1.1-db-migrations.md  story-1.2-ux-logs.md  story-1.3-unit-tests.md  story-2.1-db-backups.md  story-2.2-form-validation.md
src/squad_de_agentes_inteligentes___mvp_desenvolvimento_agil/: crew.py  crew_runner.py  main.py
src/squad_de_agentes_inteligentes___mvp_desenvolvimento_agil/config/: agents.yaml  tasks.yaml
src/squad_de_agentes_inteligentes___mvp_desenvolvimento_agil/tools/: jira_connectivity_tester.py  jira_integration_tool.py  pytest_execution_simulator.py
supabase/docs/: DB-AUDIT.md  SCHEMA.md
tests/: test_foundation.py
utils/: backup_manager.py
