[project]
name = "squad_de_agentes_inteligentes___mvp_desenvolvimento_agil"
version = "0.1.0"
description = "squad_de_agentes_inteligentes___mvp_desenvolvimento_agil using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.0,<1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poetry]
package-mode = false

[tool.crewai]
type = "crew"
